--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "server",
+  "name": "event-platform-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "EventHub - MERN Event Platform Backend Server",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["event", "mern", "express", "mongodb"],
+  "author": "Samiksha Lone",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
@@ -21,6 +27,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "uuid": "^13.0.0"
   }
 }
