--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,18 @@
     "dev": "node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["event", "mern", "express", "mongodb"],
+  "keywords": [
+    "event",
+    "mern",
+    "express",
+    "mongodb"
+  ],
   "author": "Samiksha Lone",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "@imagekit/nodejs": "^7.1.1",
+    "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
