updated new functionalities

--- a/server/.env.example
+++ b/server/.env.example
@@ -28,5 +28,10 @@ IMAGEKIT_PUBLIC_KEY=your_imagekit_public_key
 IMAGEKIT_PRIVATE_KEY=your_imagekit_private_key
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/your_endpoint
 
+# Redis Cache (Optional - for performance optimization)
+# If not provided, will use in-memory cache as fallback
+# Example: redis://localhost:6379 or redis://username:password@host:port
+REDIS_URL=
+
 # Optional: Debugging
 DEBUG=false
