--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+server/logs/
 
 # Node modules & Dependencies
 node_modules/
@@ -32,6 +33,7 @@ npm-shrinkwrap.json
 dist/
 dist-ssr/
 build/
+.dist/
 client/dist/
 client/build/
 server/build/
@@ -40,6 +42,7 @@ server/build/
 .next/
 .cache/
 out/
+*.dist
 
 # IDE & Editor
 .vscode/
@@ -149,12 +152,16 @@ vercel.json
 now.json
 netlify.toml
 
-# Ignore environment files inside client/server folders
+# Ignore environment files (all levels)
+.env
+.env.local
+.env.*.local
+.env.production.local
+.env.test.local
 client/.env
 client/.env.local
 server/.env
 server/.env.local
-
-# Ignore any env.* files in subfolders
 **/.env
 **/.env.local
+**/.env.*.local
