--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,8 @@
 # Backend API Configuration
 VITE_API_URL=http://localhost:3000
 
-# Application Mode
+# Application Environment
 VITE_ENV=development
+
+# Enable debug logging (optional)
+VITE_DEBUG=false
