--- a/client/.env.example
+++ b/client/.env.example
@@ -1,8 +1,5 @@
 # Backend API Configuration
 VITE_API_URL=http://localhost:3000
 
-# Application Environment
+# Application Mode
 VITE_ENV=development
-
-# Enable debug logging (optional)
-VITE_DEBUG=false
